D3-Networking/Ref-codes/ex06-networkpolicy/02-clients.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-client
  namespace: d3-networking
  labels: { access: web-allowed }
spec:
  containers:
    - name: busybox
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: blocked-client
  namespace: d3-networking
  labels: { access: web-blocked }
spec:
  containers:
    - name: busybox
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
